Use classes instead of element to style components

--- a/Case Converter/task/src/index.html
+++ b/Case Converter/task/src/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
     <div class="title">Case Converter</div>
-    <textarea></textarea>
+    <textarea class="textarea"></textarea>
     <div class="buttons">
         <button id="upper-case">Upper Case</button>
         <button id="lower-case">Lower Case</button>
