--- a/Case Converter/task/src/index.html
+++ b/Case Converter/task/src/index.html
@@ -10,11 +10,11 @@
     <div class="title">Case Converter</div>
     <textarea class="textarea"></textarea>
     <div class="buttons">
-        <button id="upper-case">Upper Case</button>
-        <button id="lower-case">Lower Case</button>
-        <button id="proper-case">Proper Case</button>
-        <button id="sentence-case">Sentence Case</button>
-        <button id="save-text-file">Save Text File</button>
+        <button class="button" id="upper-case">Upper Case</button>
+        <button class="button" id="lower-case">Lower Case</button>
+        <button class="button" id="proper-case">Proper Case</button>
+        <button class="button" id="sentence-case">Sentence Case</button>
+        <button class="button" id="save-text-file">Save Text File</button>
     </div>
 </div>
 <script src="js/main.js"></script>
